enh: Use ExecutorService instead of ThreadFactory. This gives us Virtual Threads support. enh: Use ExecutorService for handling new connections. enh: Message size limitation.