@@ -2,8 +2,9 @@
 package ch.astorm.smtp4j.core;
 
 import ch.astorm.smtp4j.SmtpServer;
+import ch.astorm.smtp4j.util.CloseableReentrantLock;
+
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 
@@ -12,6 +13,8 @@ import java.util.concurrent.TimeUnit;
  * This class is Thread-safe.
  */
 public class DefaultSmtpMessageHandler implements SmtpMessageHandler {
+
+    private final CloseableReentrantLock messagesLock = new CloseableReentrantLock();
     private final List<SmtpMessage> messages = new ArrayList<>(32);
     private volatile boolean serverStarted;
 
@@ -22,62 +25,66 @@ public class DefaultSmtpMessageHandler implements SmtpMessageHandler {
 
     @Override
     public void notifyClose(SmtpServer server) {
-        synchronized(messages) {
+        try (var _ = messagesLock.lockCloseable()) {
             serverStarted = false;
-            messages.notifyAll();
+            messagesLock.notifyCondition();
         }
     }
 
     @Override
     public void notifyMessage(SmtpServer server, SmtpMessage smtpMessage) {
-        synchronized(messages) {
+        try (var _ = messagesLock.lockCloseable()) {
             messages.add(smtpMessage);
-            messages.notifyAll();
+            messagesLock.notifyCondition();
         }
     }
-    
+
     @Override
     public SmtpMessageReader messageReader() {
         return new SmtpMessageReader() {
-            private List<SmtpMessage> localMessages = Collections.EMPTY_LIST;
-            
+            private List<SmtpMessage> localMessages = List.of();
+
             @Override
             public SmtpMessage readMessage() {
-                if(!localMessages.isEmpty()) {
-                    return localMessages.remove(0);
+                if (!localMessages.isEmpty()) {
+                    return localMessages.removeFirst();
                 }
-                
-                synchronized(messages) {
-                    localMessages = readMessages(1, TimeUnit.SECONDS);
-                    while(serverStarted && localMessages.isEmpty()) {
+
+                try (var _ = messagesLock.lockCloseable()) {
+                    do {
                         localMessages = readMessages(1, TimeUnit.SECONDS);
-                    }
+                    } while (serverStarted && localMessages.isEmpty());
                 }
-                
-                return !localMessages.isEmpty() ? localMessages.remove(0) : null;
+
+                return !localMessages.isEmpty() ? localMessages.removeFirst() : null;
             }
 
             @Override
-            public void close() throws Exception {
+            public void close() {
                 /* nothing */
             }
         };
     }
-    
+
     @Override
     public List<SmtpMessage> readMessages(long delayIfNoMessage, TimeUnit unit) {
-        if(!serverStarted) { return Collections.EMPTY_LIST; }
-        
-        synchronized(messages) {
-            if(messages.isEmpty() && delayIfNoMessage>=0) {
-                try { messages.wait(TimeUnit.MILLISECONDS.convert(delayIfNoMessage, unit)); }
-                catch(InterruptedException ie) { }
+        if (!serverStarted) {
+            return List.of();
+        }
+
+        try (var _ = messagesLock.lockCloseable()) {
+            if (messages.isEmpty() && delayIfNoMessage >= 0) {
+                try {
+                    messagesLock.awaitCondition(delayIfNoMessage, unit);
+                } catch (InterruptedException ie) {
+                    // ignore
+                }
             }
-            
-            if(messages.isEmpty()) {
-                return Collections.EMPTY_LIST;
+
+            if (messages.isEmpty()) {
+                return List.of();
             }
-            
+
             List<SmtpMessage> copyMsgs = new ArrayList<>(messages);
             messages.clear();
             return copyMsgs;
